2018 jul
45.0.2 - BSD fix
45.0.1 - MacOS fix

2018 jan
+ recent list and bookmarks saves the word wrap

2017 nov
* desktop/icons stuff fixes


2017 july
- User loaded external fonts //causes segfault on Qt 5.6
* other fixes


2017 may

* IMPORTANT changes for qmake pro file. The PREFIX for qmake now NOT CONTAINS "bin", i.e. by default was "usr/local/bin", but
  now is "/usr/local".
  TEA now installs tea.desktop file to $$PREFIX/share/applications, and tea binary to $$PREFIX/bin

2017 april
+ coords translation tool
* single application mode megafix

2017
+ basic block selections

2017 feb
+ cliptpl.txt to format clipboard pieces captured to the storage file 
+ Fm - Multi-rename
                   + Zero pad file names
                   + Delete N first chars at file names
                   + Replace in file names
                   + Apply template

2016 sept - 43.1.0
* Fixes to the manuals
* segfault (43.0.0 affected) on exit fixed
* Russian translation update
* some new options

2016 aug-sept //for more see github stats
+ Tune - Images - Use EXIF orientation at image viewer
+ Tune - Images - Apply hard rotation by EXIF data
+ new themes and palettes
+ new hls file format
+ optional libpoppler support (see README) for text extraction from PDF
+ optional DJVU text extractor

+ Tune - Interface - Cursor blink time (msecs), set to zero to turn blinking off
+ Tune - Interface - Cursor width
* Tune pages are scrollable
+ Functions - Tools - Scale image
* %fext, %ffilename, %fdir, %fbasename macros are %ext, %filename, %dir, %basename now
+ Search - Mark all found
+ Search - Unmark
- Alt-S, Alt-E hardcoded
+ Tune::Common - Use Left Alt + WASD as additional cursor keys
   LALT + WASD = cursor movement
   LALT + E, C = page up/down
   LWIN and the same keys = select text
+ Functions - Repeat last
* all hls updated to the new format
	
+ GIF animation support on the image preview
+ File - Do not add to recent
+ prefs UI redesign